<resources>
    <string name="google_maps_API_key">AIzaSyDgKFaDtwsmi8ZILr5OH7zX4cfO2bKWkAs</string>
    <string name="app_name">TrackMe</string>
    <string name="ver">Ver_1_0_0</string>
    <string name="target">Target</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="SignIn">Sign In</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="exit">EXIT</string>
    <string name="settings">Settings</string>
    <string name="savetrip">Save Trip</string>
    <string name="rank">Rank</string>
    <string name="save">SAVE</string>
    <string name="fame">Hall of Fame</string>

    <string-array name="transport">
        <item>by Foot</item>
        <item>by Bicycle</item>
        <item>by Car</item>
    </string-array>
</resources>
