<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="Sign In"
        android:textSize="32sp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/login_txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_txt_title"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/linear_line1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_txt_username"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_txtv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_txt_email"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_txt_username"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/login_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/login_txt_username"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/login_txtv_email"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_line2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_line1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_txtv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_txt_password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/login_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/login_txtv_pass"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:id="@+id/login_btn_signin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linear_line2"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/login_btn_signout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_btn_signin"
        android:text="@string/sign_out" />

    <Button
        android:id="@+id/login_btn_createaccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_btn_signout"
        android:text="@string/create_account" />

    <Button
        android:id="@+id/login_btn_exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_btn_createaccount"
        android:text="@string/exit" />

</RelativeLayout>